--- a/index.html
+++ b/index.html
@@ -13,18 +13,12 @@
 		<div class="rootpage__info">
 			Особенности проекта
 		</div>
-		<h2>Готовые страницы:</h2>
+		<h2>Готові сторінки:</h2>
 		<ol class="rootpage__list">
-			<li><a target="_blank" href="home.html">Главная</a></li>
+			<li><a target="_blank" href="home.html">Гоговна</a></li>
 			<li><a target="_blank" href="catalog.html">Каталог</a></li>
-			<li><a target="_blank" href="product.html">Карточка товара</a></li>
+			<li><a target="_blank" href="product.html">Карточка товару</a></li>
 		</ol>
-		<div class="rootpage__contacts">
-			<h2>Мои контакты:</h2>
-			<p>Почта: <a href="mailto:oleksii.bidiak@gmail.com">oleksii.bidiak@gmail.com</a></p>
-			<p>Телефон: <a href="tel:380964576320">+38 (096) 45 76 320</a></p>
-			<p>Соц. сеть: <a href="tg://resolve?domain=Oleksii_Bidiak">ссылка на телеграм</a></p>
-		</div>
 	</div>
 </body>
 <style>
